--- a/Assignments/A2/public/q7/browsePets.html
+++ b/Assignments/A2/public/q7/browsePets.html
@@ -298,7 +298,7 @@
         <h3 class="h3-style">See your next companion!</h3>
 
         <div
-          class="grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 items-start border-amber-400 gap-5 lg:gap-10"
+          class="browse-pets-container grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 items-start border-amber-400 gap-5 lg:gap-10"
         >
           <div
             class="bg-amber-50 rounded-lg border-1 shadow-sm border-orange-200"
@@ -869,7 +869,7 @@
         </div>
       </div>
     </footer>
-    <script src="./js/script.js"></script>
+    <script type="module" src="./js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.1/dist/flowbite.min.js"></script>
   </body>
 </html>
