--- a/Assignments/A2/public/q7/home.html
+++ b/Assignments/A2/public/q7/home.html
@@ -26,7 +26,7 @@
   <!-- As I have already designed responsive website in CSS before, I'm opting to learn Tailwind CSS, and hence exploring Flowbite templates -->
   <body class="bg-orange-100">
     <nav
-      class="fixed top-0 z-50 w-full bg-white dark:bg-orange-700/85 backdrop-blur-md"
+      class="fixed top-0 z-50 w-full bg-orange-700/85 dark:bg-orange-700/85 backdrop-blur-md"
     >
       <div class="w-full bg-gray-200 rounded-full h-1 dark:bg-gray-700">
         <div class="bg-orange-300 h-1 progress-bar"></div>
