--- a/Assignments/A2/public/q7/home.html
+++ b/Assignments/A2/public/q7/home.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PawsVille Home</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/flowbite@3.1.1/dist/flowbite.min.css"
       rel="stylesheet"
-    />
+    /> -->
+    <link rel="stylesheet" href="styles.css" />
+
     <link rel="stylesheet" href="output.css" />
     <link
       rel="shortcut icon"
