--- a/Assignments/A2/public/q7/home.html
+++ b/Assignments/A2/public/q7/home.html
@@ -65,7 +65,7 @@
                 alt="PawsVille Logo"
               />
               <span
-                class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white righteous-regular"
+                class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap text-white righteous-regular"
                 >PawsVille</span
               >
             </a>
@@ -84,7 +84,7 @@
           <li>
             <a
               href="#"
-              class="flex items-center p-2 text-gray-900 rounded-lg dark:text-orange-700 hover:text-white hover:bg-gray-100 dark:hover:bg-slate-700 group"
+              class="flex items-center p-2 text-orange-700 rounded-lg dark:text-orange-700 hover:text-white hover:bg-gray-100 darkv:hover:bg-slate-700 group"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
