--- a/Assignments/A2/public/q7/home.html
+++ b/Assignments/A2/public/q7/home.html
@@ -28,7 +28,7 @@
   <!-- As I have already designed responsive website in CSS before, I'm opting to learn Tailwind CSS, and hence exploring Flowbite templates -->
   <body class="bg-orange-100">
     <nav
-      class="fixed top-0 z-50 w-full bg-orange-700/85 dark:bg-orange-700/85 backdrop-blur-md"
+      class="fixed top-0 z-50 w-full bg-orange-700 dark:bg-orange-700/85 backdrop-blur-md"
     >
       <div class="w-full bg-gray-200 rounded-full h-1 dark:bg-gray-700">
         <div class="bg-orange-300 h-1 progress-bar"></div>
@@ -79,12 +79,12 @@
       class="fixed top-0 left-0 z-40 w-64 sm:w-50 xl:w-70 h-screen pt-20 transition-transform -translate-x-full bg-white border-r border-gray-200 sm:translate-x-0 dark:bg-orange-50 dark:border-orange-200"
       aria-label="Sidebar"
     >
-      <div class="h-full px-3 pb-4 overflow-y-auto bg-white dark:bg-orange-50">
+      <div class="h-full px-3 pb-4 overflow-y-auto bg-white dark:bg-50">
         <ul class="space-y-2 font-medium">
           <li>
             <a
               href="#"
-              class="flex items-center p-2 text-orange-700 rounded-lg dark:text-orange-700 hover:text-white hover:bg-gray-100 darkv:hover:bg-slate-700 group"
+              class="flex items-center p-2 text-orange-700 rounded-lg dark:text-orange-700 hover:text-white hover:bg-gray-100 dark:hover:bg-slate-700 group"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
