--- a/Assignments/A2/public/q7/browsePets.html
+++ b/Assignments/A2/public/q7/browsePets.html
@@ -300,7 +300,7 @@
         <div
           class="browse-pets-container grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 items-start border-amber-400 gap-5 lg:gap-10"
         >
-          <div
+          <!-- <div
             class="bg-amber-50 rounded-lg border-1 shadow-sm border-orange-200"
           >
             <figure
@@ -676,7 +676,7 @@
                 </button>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
