--- a/Assignments/A2/public/q7/findPet.html
+++ b/Assignments/A2/public/q7/findPet.html
@@ -335,12 +335,12 @@
               id="form-find-dog-breed-select"
               class="p-1 bg-white lg:w-60"
             >
+              <option value="all-dog">All</option>
               <option value="frenchBulldog">French Bulldog</option>
               <option value="labradorRetriever">Labrador Retriever</option>
               <option value="goldenRetriever">Golden Retriever</option>
               <option value="germanShepherd">German Shepherd</option>
               <option value="poodle">Poodle</option>
-              <option value="dm">All</option>
             </select>
           </div>
           <div class="form-group">
@@ -350,14 +350,12 @@
               id="form-find-cat-breed-select"
               class="p-1 bg-white"
             >
+              <option value="all-dog">All</option>
               <option value="ragdoll">Ragdoll</option>
               <option value="maineCoon">Maine Coon</option>
-
               <option value="britishShorthair">British Shorthair</option>
               <option value="scottishFold">Scottish Fold</option>
-
               <option value="sphynx">Sphynx</option>
-              <option value="dm">All</option>
             </select>
           </div>
           <div class="form-group">
@@ -423,7 +421,7 @@
             </div>
           </div>
           <div class="form-group">
-            <label class="font-semibold">Get along with</label>
+            <label class="font-semibold">Get along with (optional)</label>
 
             <div>
               <input
