--- a/Assignments/A3/q3/ex3.html
+++ b/Assignments/A3/q3/ex3.html
@@ -6,7 +6,7 @@
     <title>Question 3</title>
   </head>
   <body>
-    <form action="/something" method="POST">
+    <form action="/post" method="POST">
       <div>
         <label for=""
           >Name
